--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../../part2/notes && npm install && npm run build && cp -r dist ../../part3/backend",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
+    "deploy:donotuse": "npm run build:ui && git add . && git commit -m uibuild && git push",
+    "deploy:full": "npm run build:ui"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
